--- a/box-model.html
+++ b/box-model.html
@@ -21,7 +21,9 @@
 	<body>
 		<div>
 			<div id="box-zone">
-				<div class="box"></div>
+				<div class="box">
+					<p id="content">Hello World</p>
+				</div>
 			</div>
 
 			<div>
