--- a/box-model.html
+++ b/box-model.html
@@ -4,6 +4,11 @@
 		<title>Box Model</title>
 		<style>
 
+			body {
+				tab-size: 2;
+				font-size: 20px;
+			}
+
 			#box-zone {
 				border: 4px solid #999;
 				width: 600px;
@@ -15,6 +20,25 @@
 				height: 100px;
 				border-style: solid;
 				border-width: 0;
+			}
+
+			code {
+				font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+				font-size: 1rem;
+			}
+
+			input, select {
+				display: inline-block;
+				width: 4rem;
+				text-align: right;
+				font-size: 1rem;
+				padding: 0.25rem;
+				border: 1px solid #aaa;
+				border-radius: 0.5rem;
+			}
+
+			select {
+				width: auto
 			}
 		</style>
 	</head>
@@ -63,7 +87,6 @@
 				}
 
 				const value = e.target.value
-				console.log(value)
 
 				if (e.target.matches('#width')) {
 					box.style.width = `${value}px`
