--- a/box-model.html
+++ b/box-model.html
@@ -9,6 +9,20 @@
 				font-size: 20px;
 			}
 
+			.container {
+				display: flex;
+			}
+
+			.code-zone {
+				padding: 2em;
+				display: flex;
+				flex-direction: column;
+			}
+
+			textarea {
+				flex: 1;
+			}
+
 			#box-zone {
 				border: 4px solid #999;
 				width: 600px;
@@ -16,8 +30,8 @@
 			}
 			.box {
 				background-color: red;
-				width: 100px;
-				height: 100px;
+				/* width: 100px;
+				height: 100px; */
 				border-style: solid;
 				border-width: 0;
 			}
@@ -31,6 +45,10 @@
 				display: inline-block;
 				width: 4rem;
 				text-align: right;
+			}
+
+			input, select, textarea {
+				
 				font-size: 1rem;
 				padding: 0.25rem;
 				border: 1px solid #aaa;
@@ -43,23 +61,25 @@
 		</style>
 	</head>
 	<body>
-		<div>
+		<div class="container">
 			<div id="box-zone">
 				<div class="box">
-					<p id="content">Hello World</p>
+					<span id="content">Hello World</span>
 				</div>
 			</div>
 
-			<div>
+			<div class="code-zone"> 
 				<pre>
 .box {
-	background-color: <input id="backgroundColor" value="#f00">;
-	width: <input id="width" value="100">px;
-	height: <input id="height" value="100">px;
-	padding: <input id="padding" value="0">px;
-	margin: <input id="margin" value="0">px;
-	border-width: <input id="border" value="0">px;
+	color: <input id="color" value="#f00" type="color">;
+	background-color: <input id="backgroundColor" value="#f00" type="color">;
+	width: <input id="width" value="" type="number" data-unit="px">px;
+	height: <input id="height" value="" type="number" data-unit="px">px;
+	padding: <input id="padding" value="0" type="number" data-unit="px">px;
+	margin: <input id="margin" value="0" type="number" data-unit="px">px;
+	border-width: <input id="border" value="0" type="number" data-unit="px">px;
 	border-style: <select id="borderStyle">
+		<option>none</option>
 		<option>solid</option>
 		<option>dotted</option>
 		<option>dashed</option>
@@ -68,11 +88,11 @@
 		<option>ridge</option>
 		<option>inset</option>
 		<option>outset</option>
-		<option>none</option>
 		<option>hidden</option>
 	</select>;
 }
 				</pre>
+				<textarea>Hello World</textarea>
 			</div>
 		</div>
 
@@ -90,21 +110,13 @@
 				}
 
 				const value = e.target.value
+				const id = e.target.id 
+				const unit = e.target.dataset.unit ? e.target.dataset.unit : ''
 
-				if (e.target.matches('#width')) {
-					box.style.width = `${value}px`
-				} else if (e.target.matches('#height')) {
-					box.style.height = `${value}px`
-				} else if (e.target.matches('#padding')) {
-					box.style.padding = `${value}px`
-				} else if (e.target.matches('#border')) {
-					box.style.borderWidth = `${value}px`
-				} else if (e.target.matches('#margin')) {
-					box.style.margin = `${value}px`
-				} else if (e.target.matches('#backgroundColor')) {
-					box.style.backgroundColor = value;
-				} else if (e.target.matches('#borderStyle')) {
-					box.style.borderStyle = value;
+				box.style[id] = `${value}${unit}`
+
+				if ((id === 'width' || id === 'height') && value === '') {
+					box.style[id] = 'unset'
 				}
 			}
 		</script>
