--- a/text-styles.html
+++ b/text-styles.html
@@ -10,9 +10,10 @@
 
 			#selector-label {
 				padding: 10px;
-				font-size: 0.85em;
+				font-size: 0.75em;
 				font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 				background-color: #eee;
+				margin: 0 0 1em 0;
 			}
 
 			#text-sample {
@@ -25,7 +26,22 @@
 			code {
 				font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 				font-size: 1rem;
+				color: rgb(41, 103, 5);
 			}
+
+			code .comment {
+				color:rgb(106, 5, 89)
+			}
+
+			code .selector {
+				color:rgb(22, 92, 145)
+			}
+ 
+			.code-zone {
+				padding: 2em;
+				background-color: #eee;
+			}
+			
 
 			input, select {
 				display: inline-block;
@@ -40,23 +56,45 @@
 			select {
 				width: auto
 			}
+
+			textarea {
+				box-sizing: border-box;
+				width: 100%;
+				padding: 0.5em;
+				border: 1px solid;
+				border-radius: 5px;
+				font-size: 1em;
+			}
+
+			.container {
+				display: flex;
+			}
+
+			.demo {
+				flex: 1;
+				padding: 2em;
+				display: flex;
+				flex-direction: column;
+			}
+
 		</style>
 	</head>
 	<body>
-		
-		<div>
-			<div id="selector-label">
-				div#text-sample
+		<div class="container">
+			<div class="demo">
+				<div id="selector-label">
+					div#text-sample
+				</div>
+				<div id="text-sample">Hello World</div>
+				<hr>
+				<div>
+					<textarea id="text-area">Hello World</textarea>
+				</div>
+				<hr>
 			</div>
-			<div id="text-sample">Hello World</div>
-			<hr>
-			<div>
-				<textarea id="text-area">Hello World</textarea>
-			</div>
-			<hr>
-			<pre>
-#text-sample {
-	/* Font Properties */
+			<div class="code-zone">
+			<pre><code><span class="selector">#text-sample</span> {
+	<span class="comment">/* Font Properties */</span>
 	font-family: <select id="fontFamily">
 		<optgroup label="Serif">
 			<option>Times</option>
@@ -115,13 +153,13 @@
 		<option>justify</option>
 	</select>;
 
-	/* Box Properties */
+	<span class="comment">/* Box Properties */</span>
 	background-color: <input id="backgroundColor" type="color">;
 	margin: <input id="margin" type="number" data-unit="px" value="0">px;
 	padding: <input id="padding" type="number" data-unit="px" value="0">px;
-}
-			</pre>
+}</code></pre>
 		</div>
+	</div>
 
 		<script>
 			const textSample = document.querySelector('#text-sample')
@@ -149,6 +187,10 @@
 				const value = e.target.value
 				const id = e.target.id
 				textSample.style[id] = value + unit
+
+				if (id === 'lineHeight' && value === '') {
+					textSample.style[id] = 'unset'
+				}
 			}
 		</script>
 
