updated box model example

--- a/text-styles.html
+++ b/text-styles.html
@@ -2,10 +2,19 @@
 <html>
 	<head>
 		<title>Text Styles</title>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300;1,500&display=swap" rel="stylesheet">
 		<style>
+
+			test {
+				text-transform: uppercase;
+				list-style: circle;
+				text-decoration: line-through;
+			}
+
 			body {
 				tab-size: 2;
 				font-size: 20px;
+				font-family: 'Roboto', sans-serif, Helvetica;
 			}
 
 			#selector-label {
