--- a/box-model.html
+++ b/box-model.html
@@ -64,7 +64,7 @@
 		<div class="container">
 			<div id="box-zone">
 				<div class="box">
-					<span id="content">Hello World</span>
+					Hello World
 				</div>
 			</div>
 
@@ -92,16 +92,20 @@
 	</select>;
 }
 				</pre>
-				<textarea>Hello World</textarea>
+				<textarea id="text-area">Hello World</textarea>
 			</div>
 		</div>
 
 		<script>
 			const styleOutput = document.querySelector('#style-output')
-			
+			const textArea = document.querySelector('#text-area')
 			const box = document.querySelector('.box')
 			document.querySelector('body').addEventListener('input', updateStyles)
 			// document.querySelector('body').addEventListener('change', updateStyles)
+
+			textArea.addEventListener('input', (e) => {
+				box.innerHTML = e.target.value
+			})
 
 			function updateStyles(e) {
 				
