--- a/box-model.html
+++ b/box-model.html
@@ -77,7 +77,7 @@
 	height: <input id="height" value="" type="number" data-unit="px">px;
 	padding: <input id="padding" value="0" type="number" data-unit="px">px;
 	margin: <input id="margin" value="0" type="number" data-unit="px">px;
-	border-width: <input id="border" value="0" type="number" data-unit="px">px;
+	border-width: <input id="borderWidth" value="0" type="number" data-unit="px">px;
 	border-style: <select id="borderStyle">
 		<option>none</option>
 		<option>solid</option>
@@ -90,6 +90,7 @@
 		<option>outset</option>
 		<option>hidden</option>
 	</select>;
+	border-color: <input id="borderColor" value="0" type="color">;
 }
 				</pre>
 				<textarea id="text-area">Hello World</textarea>
