--- a/flex-box.html
+++ b/flex-box.html
@@ -92,8 +92,12 @@
 		}
 
 		.box {
-			width: 50px;
-			height: 50px;
+			/* width: 50px;
+			height: 50px; */
+			padding: 1em;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 		}
 	</style>
 </head>
@@ -113,18 +117,31 @@
 		<option>flex-start</option>
 		<option>flex-end</option>
 		<option>center</option>
+		<option>space-around</option>
+		<option>space-between</option>
+		<option>space-evenly</option>
 	</select>;
 	align-items: <select id="alignItems">
 		<option>flex-start</option>
 		<option>flex-end</option>
 		<option>center</option>
+		<option>basline</option>
+		<option>stretch</option>
 	</select>;
 	flex-direction: <select id="flex-direction">
 		<option>row</option>
 		<option>column</option>
 	</select>;
 }</code></pre>
-	<button id="add-box">Add Box</button>
+	<p>
+		<button id="add-box">Add Box</button>
+	</p>
+	<p>
+		<!-- <label>
+			<input type="checkbox" id="random-size">
+		</label> -->
+	</p>
+	
 		</div>
 	</div>
 
@@ -141,6 +158,7 @@
 			el.style.backgroundColor = `hsl(${hue}, 100%, 50%)`
 			demo.appendChild(el)
 			boxesArray.push(el)
+			el.innerHTML = boxesArray.length
 		})
 
 
